fix height of margin additions to avoid gap b/w paragraphs

--- a/Final MT Transcriptions/style-mt-html.css
+++ b/Final MT Transcriptions/style-mt-html.css
@@ -399,6 +399,7 @@ p{
 	text-indent:0;	
 	float:left;
 	text-align:left;
+	height:0;
 	/*font-size:.9em;*/
 }
 .add.marginleft .note{
